# rhmm

./: Cargo.toml  LICENSE  README.md
.qoder/repowiki/zh/content/: 快速开始.md  测试基准.md  错误处理.md  项目概述.md
.qoder/repowiki/zh/content/API 参考/: API 参考.md  核心 Trait 接口.md  类型定义.md
.qoder/repowiki/zh/content/API 参考/模型实现 API/: 多项式 HMM API.md  模型实现 API.md  贝塔 HMM API.md  高斯 HMM API.md  高斯混合模型 HMM API.md
.qoder/repowiki/zh/content/API 参考/算法实现 API/: Baum-Welch 算法 API.md  前向算法 API.md  后向算法 API.md  算法实现 API.md  维特比算法 API.md
.qoder/repowiki/zh/content/工具模块/: 工具模块.md  序列处理工具.md  数值归一化工具.md  数据验证工具.md  随机采样工具.md
.qoder/repowiki/zh/content/开发指南/: 代码贡献.md  开发指南.md  开发环境.md  性能优化.md  测试策略.md
.qoder/repowiki/zh/content/开发指南/模型开发/: Trait 接口设计.md  模型开发.md  测试验证框架.md  训练算法集成.md
.qoder/repowiki/zh/content/核心概念/: HMM 基础理论.md  数学基础.md  核心概念.md
.qoder/repowiki/zh/content/核心概念/模型类型详解/: 多项式 HMM.md  模型类型详解.md  贝塔 HMM.md  高斯 HMM.md  高斯混合模型 HMM.md
.qoder/repowiki/zh/content/核心概念/算法原理/: Baum-Welch 算法.md  前向算法.md  后向算法.md  算法原理.md  维特比算法.md
.qoder/repowiki/zh/content/模型实现/: 多项式 HMM.md  模型实现.md  贝塔 HMM.md  高斯 HMM.md  高斯混合模型 HMM.md
.qoder/repowiki/zh/content/示例教程/: 基础使用示例.md  实践练习题.md  示例教程.md  高级应用案例.md
.qoder/repowiki/zh/content/算法实现/: Baum-Welch 算法.md  前向算法.md  后向算法.md  算法实现.md  维特比算法.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
examples/: beta_hmm_example.rs  polars_example.rs
src/: errors.rs  lib.rs
src/algorithms/: backward.rs  baum_welch.rs  forward.rs  mod.rs  viterbi.rs
src/base/: hmm.rs  mod.rs  types.rs
src/models/: beta.rs  gaussian.rs  gmm.rs  mod.rs  multinomial.rs
src/utils/: mod.rs  normalization.rs  polars.rs  sampling.rs  sequences.rs  validation.rs
tests/: integration_tests.rs  polars_tests.rs
(+5 files in other folders)
