[package]
name = "rhmm"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.17.2"
ndarray-linalg = "0.18.1"
rand = "0.9.2"
rand_distr = "0.5.1"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.52.0", optional = true }

[dev-dependencies]
approx = "0.5"


[features]
default = []
polars = ["dep:polars"]