[package]
name = "rhmm"
version = "0.0.2"
edition = "2021"
description = "A rust implementation of hidden markov models."
repository = "https://github.com/unico-serein/rhmm"
readme = "README.md"           
license = "MIT"
keywords = ["hmm", "hidden-markov-model", "machine-learning", "statistics"]
authors = ["YanXu Fu <unico-serein@hotmail.com>"]
exclude = [
  "target/**",
  ".github/**",
  "scripts/**",
  "*.log",
  ".qoder/**"

]

[dependencies]
ndarray = "0.17.2"
ndarray-linalg = "0.18.1"
rand = "0.9.2"
rand_distr = "0.5.1"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
